# FletClick

./: LICENSE.md  README.md  TODO.txt  pyproject.toml  requirements.txt
flet_clicker/src/: config.py  main.py
flet_clicker/src/common/: observer.py  singleton.py
flet_clicker/src/functions/: clicker.py  sidebar_functions.py
flet_clicker/src/gui/: main_content.py  main_content_first_page.py  main_content_second_page.py  side_bar.py  status_bar.py  top_bar.py
flet_clicker/src/gui/blocks/: delay_randomization_between_clicks_block.py  selecting_click_location_block.py  selecting_clicker_mode_block.py  selecting_delay_between_clicks_block.py  selecting_type_of_clicks_block.py  start_stop_block.py  status_bar.py  top_bar.py
flet_clicker/src/gui/controls/: container_without_indents.py  information_bar_text.py  label_container.py
flet_clicker/src/gui/pages/first/: first_page_main_content.py
flet_clicker/src/gui/pages/second/: second_page_main_content.py
flet_clicker/src/util/: get_random_color_name.py
