[tool.poetry]
name = "flet clicker"
version = "0.1.0"
description = ""
authors = ["Roman <anovelforstudy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.19.0"
pyautogui = "^0.9.54"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119

[tool.ruff.lint.isort]
known-third-party = ["icecream"]
known-first-party = ["src", "gui", "config"]
